Add Mac jPackage configuration